--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
             <form action="">
                 <div class="form-group">
                <label for="user">Usuario</label>
-                <input type="text" name="" id="user" class="form-control">
+                <input type="text" id="user" class="form-control">
                 </div>
                 <div class="form-group">
                 <label for="pass">Contraseña</label>
                 <input type="password"  id="pass" class="form-control">
                 </div>
-                <input type="submit" value="Ingresar" class="btn btn-success btn-block">
+                <input type="submit" value="Registro" class="btn btn-success btn-block">
             </form>
-            <div id="link" class="mt-2"
+              <div id="link" class="mt-2">
             <a href="./registro.html"> vamos al registro</a>
+              </div>
         </div>
     </div>
 </body>
