--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=decive-width, initial-scale=1.0">
-    <title> el login</title>
-<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <title> el inicio</title>
+<link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="container mt-5">
         <div id="login">
-            <form action="">
+            <form id="formLogin">
                 <div class="form-group">
                <label for="user">Usuario</label>
                 <input type="text" id="user" class="form-control">
@@ -26,5 +26,6 @@
               </div>
         </div>
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
